--- a/Project/style.css
+++ b/Project/style.css
@@ -18,6 +18,7 @@
     /* border: 2px solid; */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.75em;
+    border-radius: 1em;
 }
 
 .screen{
@@ -28,6 +29,7 @@
     color: white;
 
     border: 2px solid;
+    border-radius: 1em;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
